Update StorageManager.java